<resources>
    <string name="app_name">Thailand Yearly Income</string>
    <string name="yearly_income_2558">รายได้เฉลี่ยต่อปี พ.ศ. 2558</string>
    <string name="view_by_province">ดูข้อมูลรายจังหวัด</string>
    <string name="data_credit">จากข้อมูล จปฐ. โดย กรมการพัฒนาชุมชน</string>
    <string name="baht_per_year">บาท/ปี</string>
    <string name="surveyed_population">จำนวนประชากรที่สำรวจ</string>
    <string name="surveyed_families">จำนวนครอบครัวที่สำรวจ</string>
    <string name="yearly_income">รายได้เฉลี่ยต่อปี</string>
    <string name="person">คน</string>
    <string name="families">ครอบครัว</string>
    <string name="search">ค้นหา</string>
    <string name="search_hint">พิมพ์คำค้นหาที่ต้องการ</string>
</resources>
